--- a/src/main/resources/templates/review_approval.html
+++ b/src/main/resources/templates/review_approval.html
@@ -15,7 +15,7 @@
                         <div class="col mx-auto custom-bg">
                             <div id=approvalReview>
 
-                               <form action="#" method="post" th:action="@{/newReview}" th:object="${ReviewKey}">
+                               <form action="#" method="post" th:action="@{/newApproveReview}" th:object="${ReviewKey}">
 
                                     <div class="custom-label">
                                         <h3>Contractor Performance Review</h3>
@@ -67,10 +67,10 @@
 
 
                                    <div class="form-group custom-label">
-                                            <label th:for="inititative">Initative</label>
+                                            <label th:for="initative">Initative</label>
                                             <input
                                                     class="form-control"
-                                                    th:field="*{initiative}"
+                                                    th:field="*{initative}"
                                                     type="number" pattern="/d*"/>
                                         </div>
 
@@ -82,6 +82,20 @@
                                    </div>
 
 
+                                   <div class="form-group custom-label">
+                                       <label th:for="productivity">Initative</label>
+                                       <input
+                                               class="form-control"
+                                               th:field="*{productivity}"
+                                               type="number" pattern="/d*"/>
+                                   </div>
+
+
+                                   <div class="alert alert-danger"
+                                        th:errors="*{initative}"
+                                        th:if="${#fields.hasErrors('initiative')}">
+                                       Error: Please enter a number between 1-3.
+                                   </div>
 
                                    <div class="form-group custom-label">
                                                 <label th:for="working_relationships">Working Relationships</label>
@@ -107,9 +121,9 @@
                                         <button class="btn btn- btn-primary" id="save" type="save"
                                            id="approve">Save</button>
 
-                                                    <button class="btn btn-primary "
-                                                              th:href="@{/Review}"
-                                                            th:id="back"> Back</button>
+<!--                                                    <button class="btn btn-primary "-->
+<!--                                                              th:href="@{/Reviews}"-->
+<!--                                                            th:id="back"> Back</button>-->
 
                                 <!--   <button class="btn btn- btn-primary" th:onclick="|sendApproval('${Timesheet.id}')|"
                                            id="approve">Save</button> -->
