--- a/src/main/resources/templates/review_approval.html
+++ b/src/main/resources/templates/review_approval.html
@@ -23,7 +23,7 @@
                                     </div>
 
                                     <div class="form-group custom-label">
-                                        <label th:for="communication">Communication</label>
+                                        <label >Communication</label>
                                         <input
                                                class="form-control"
                                                th:field="*{communication}"
@@ -38,7 +38,7 @@
 
 
                                    <div class="form-group custom-label">
-                                    <label th:for="technical_skills">Technical Skills</label>
+                                    <label >Technical Skills</label>
                                     <input
                                             class="form-control"
                                             th:field="*{technical_skills}"
@@ -53,7 +53,7 @@
 
 
                                     <div class="form-group custom-label">
-                                        <label th:for="quality">Quality</label>
+                                        <label>Quality</label>
                                         <input class="form-control"
                                                th:field="*{quality}"
                                                type="number" pattern="/d*"/>
@@ -77,13 +77,13 @@
 
                                    <div class="alert alert-danger"
                                         th:errors="*{initative}"
-                                        th:if="${#fields.hasErrors('initiative')}">
+                                        th:if="${#fields.hasErrors('initiative_rating ')}">
                                        Error: Please enter a number between 1-3.
                                    </div>
 
 
                                    <div class="form-group custom-label">
-                                       <label th:for="productivity">Initative</label>
+                                       <label>Productivity</label>
                                        <input
                                                class="form-control"
                                                th:field="*{productivity}"
@@ -92,21 +92,21 @@
 
 
                                    <div class="alert alert-danger"
-                                        th:errors="*{initative}"
-                                        th:if="${#fields.hasErrors('initiative')}">
+                                        th:errors="*{productivity}"
+                                        th:if="${#fields.hasErrors('productivity_rating')}">
                                        Error: Please enter a number between 1-3.
                                    </div>
 
                                    <div class="form-group custom-label">
-                                                <label th:for="working_relationships">Working Relationships</label>
+                                                <label>Working Relationships</label>
                                                 <input
                                                         class="form-control"
                                                         th:field="*{working_relationships}"
                                                         type="number" pattern="/d*"/>
                                             </div>
                                    <div class="alert alert-danger"
-                                        th:errors="*{working_relations}"
-                                        th:if="${#fields.hasErrors('working_relations')}">
+                                        th:errors="*{working_relationships}"
+                                        th:if="${#fields.hasErrors('working_relationships')}">
                                        Error: Please enter a number between 1-3.
                                    </div>
 
