--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -93,6 +93,21 @@
                             </div>
                         </div>
 
+                        <div class="form-group custom-label">
+                            <label th:for="role">Role</label>
+                            <input aria-describedby="Enter Role."
+                                   class="form-control"
+                                   placeholder="Role"
+                                   th:field="*{role}"
+                                   type="text">
+
+                            <div class="alert alert-danger"
+                                 th:errors="*{role}"
+                                 th:if="${#fields.hasErrors('role')}">
+                                Role Error: Please enter a valid Role.
+                            </div>
+                        </div>
+
                         <div class="row mt-4">
                             <input th:name="${_csrf.parameterName}" th:value="${_csrf.token}" type="hidden"/>
 
@@ -106,52 +121,6 @@
         </div>
     </div>
 </main>
-
-<!--<div th:replace="fragments/header :: header"></div>-->
-
-<!--<h1 th:text="#{label.form.title}">form</h1>-->
-<!--<form action="/" enctype="utf8" method="POST" th:object="${user}">-->
-
-
-<!--    <div>-->
-<!--        <label th:text="#{label.user.lastName}">username</label>-->
-<!--        <input th:field="*{username}"/>-->
-<!--        <p th:each="error : ${#fields.errors('username')}"-->
-<!--           th:text="${error}">Validation error</p>-->
-<!--    </div>-->
-
-<!--    <div>-->
-<!--        <label th:text="#{label.user.firstName}">firstName</label>-->
-<!--        <input th:field="*{firstName}"/>-->
-<!--        <p th:each="error : ${#fields.errors('firstName')}"-->
-<!--           th:text="${error}">Validation error</p>-->
-<!--    </div>-->
-
-<!--    <div>-->
-<!--        <label th:text="#{label.user.lastName}">lastName</label>-->
-<!--        <input th:field="*{lastName}"/>-->
-<!--        <p th:each="error : ${#fields.errors('lastName')}"-->
-<!--           th:text="${error}">Validation error</p>-->
-<!--    </div>-->
-
-<!--    <div>-->
-<!--        <label th:text="#{label.user.password}">password</label>-->
-<!--        <input th:field="*{password}" type="password"/>-->
-<!--        <p th:each="error : ${#fields.errors('password')}"-->
-<!--           th:text="${error}">Validation error</p>-->
-<!--    </div>-->
-
-<!--    <div>-->
-<!--        <label th:text="#{label.user.confirmPass}">confirm</label>-->
-<!--        <input th:field="*{matchingPassword}" type="password"/>-->
-<!--    </div>-->
-<!--    <button th:text="#{label.form.submit}" type="submit">submit</button>-->
-<!--</form>-->
-
-<!--<a th:href="@{/login}" th:text="#{label.form.loginLink}">login</a>-->
-
-<!--<div th:replace="fragments/footer :: footer">-->
-<!--</div>-->
 
 </body>
 </html>
