--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -42,6 +42,10 @@
                         <a class="btn btn-lg btn-primary btn-block text-uppercase custom-btn"
                            th:href="@{/register}"
                            th:id="register">Register</a>
+
+                        <a class="btn btn-lg btn-primary btn-block text-uppercase custom-btn"
+                           th:href="@{/registerAgency}"
+                           th:id="registerAgency">Register Agency</a>
                     </div>
 
                 </form>
