--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -94,19 +94,28 @@
                         </div>
 
                         <div class="form-group custom-label">
-                            <label th:for="role">Role</label>
-                            <input aria-describedby="Enter Role."
-                                   class="form-control"
-                                   placeholder="Role"
-                                   th:field="*{role}"
-                                   type="text">
-
-                            <div class="alert alert-danger"
-                                 th:errors="*{role}"
-                                 th:if="${#fields.hasErrors('role')}">
-                                Role Error: Please enter a valid Role.
-                            </div>
+                            <label th:for="role">Select Role</label>
+                            <select class="form-control" th:field="*{role}">
+                                <option th:value="ROLE_CONTRACTOR">CONTRACTOR</option>
+                                <option th:value="ROLE_MANAGER">MANAGER</option>
+                                <option th:value="ROLE_ADMIN">ADMIN</option>
+                            </select>
                         </div>
+
+<!--                        <div class="form-group custom-label">-->
+<!--                            <label th:for="role">Role</label>-->
+<!--                            <input aria-describedby="Enter Role."-->
+<!--                                   class="form-control"-->
+<!--                                   placeholder="Role"-->
+<!--                                   th:field="*{role}"-->
+<!--                                   type="text">-->
+
+<!--                            <div class="alert alert-danger"-->
+<!--                                 th:errors="*{role}"-->
+<!--                                 th:if="${#fields.hasErrors('role')}">-->
+<!--                                Role Error: Please enter a valid Role.-->
+<!--                            </div>-->
+<!--                        </div>-->
 
                         <div class="row mt-4">
                             <input th:name="${_csrf.parameterName}" th:value="${_csrf.token}" type="hidden"/>
