--- a/src/main/resources/templates/review_approval.html
+++ b/src/main/resources/templates/review_approval.html
@@ -15,12 +15,13 @@
                         <div class="col mx-auto custom-bg">
                             <div id=approvalReview>
 
-                               <form action="#" method="post" th:action="@{/newApproveReview}" th:object="${ReviewKey}">
+                               <form action="#" method="post" th:action="@{/createReview}" th:object="${ApprovalreviewDetails}">
 
                                     <div class="custom-label">
                                         <h3>Contractor Performance Review</h3>
                                         <p>Please rate on a scale of 1-3  1: Needs Improvement  2: Meets Expectations </p>
                                     </div>
+                                   <input th:field="*{timesheet}" th:value="*{timesheet}" type="hidden"/>
 
                                     <div class="form-group custom-label">
                                         <label >Communication</label>
@@ -77,7 +78,7 @@
 
                                    <div class="alert alert-danger"
                                         th:errors="*{initative}"
-                                        th:if="${#fields.hasErrors('initiative_rating ')}">
+                                        th:if="${#fields.hasErrors('initative')}">
                                        Error: Please enter a number between 1-3.
                                    </div>
 
@@ -93,7 +94,7 @@
 
                                    <div class="alert alert-danger"
                                         th:errors="*{productivity}"
-                                        th:if="${#fields.hasErrors('productivity_rating')}">
+                                        th:if="${#fields.hasErrors('productivity')}">
                                        Error: Please enter a number between 1-3.
                                    </div>
 
@@ -118,7 +119,7 @@
                                                             th:field="*{message}"
                                                             type="text" />
                                                 </div>
-                                        <button class="btn btn- btn-primary" id="save" type="save"
+                                        <button class="btn btn- btn-primary" type="submit"
                                            id="approve">Save</button>
 
 <!--                                                    <button class="btn btn-primary "-->
