--- a/src/main/resources/templates/admin_manage_roles_view.html
+++ b/src/main/resources/templates/admin_manage_roles_view.html
@@ -26,6 +26,28 @@
                      aria-hidden="true">
                     <div class="modal-dialog modal-lg" role="document">
                         <div class="modal-content">
+                            <div class="modal-header">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="btn-group">
+                                            <label>
+                                                <select id="roleSelect" name="Role Select"
+                                                        class="md-form mdb-select colorful-select btn-secondary btn-lg">
+                                                    <option value="" disabled selected>Select an Option
+                                                    </option>
+                                                    <option value="contractors">Assign Contractors</option>
+                                                    <option value="2">Contractor</option>
+                                                    <option value="3">Agency</option>
+                                                </select>
+                                            </label>
+                                        </div>
+
+
+                                        <label>Role to Edit</label>
+                                    </div>
+                                </div>
+                            </div>
+
                             <div class="modal-body">
 
                                 <div class="row">
@@ -34,43 +56,43 @@
 
                                         <!-- Dropdown For Manager Select-->
                                         <div class="card-body">
-                                            <div class="row">
-                                                <div class="col-md-6">
-                                                    <div class="btn-group">
-                                                        <label>
-                                                            <select class="md-form mdb-select colorful-select btn-secondary btn-lg">
-                                                                <option value="" disabled selected>Select an Option</option>
-                                                                <option value="1">Manager</option>
-                                                                <option value="2">Contractor</option>
-                                                                <option value="3">Agency</option>
+
+
+                                            <div class="row lists custom-form" id="contractors" style="display:none">
+                                                <div class="col-xl custom-bg">
+                                                    <div class="text-center">
+                                                        <Form>
+                                                            <select>
+                                                                <option th:each="i:${managerKey}" th:value="*{i}" th:text="*{i.username}"></option>
                                                             </select>
-                                                        </label>
+
+                                                            <!--TODO Some Crazy Table Insert Or Server Call to Populate Here-->
+                                                            Contractor
+                                                            Table Here
+                                                        </Form>
                                                     </div>
-
-                                                    <label>Role to Edit</label>
-
                                                 </div>
                                             </div>
 
-                                            <div class="text-center">
-
-                                                <button type="button" class="btn btn-secondary"
-                                                        data-dismiss="modal">
-                                                    Close
-                                                </button>
-
-                                                <button class="btn btn-primary">
-                                                    Save Changes
-                                                </button>
-
-                                            </div>
 
                                         </div>
                                     </div>
 
                                 </div>
+                            </div>
 
+                            <div class="modal-footer">
+                                <div class="text-center">
+                                    <button type="button" class="btn btn-secondary"
+                                            data-dismiss="modal">
+                                        Close
+                                    </button>
 
+                                    <button class="btn btn-primary">
+                                        Save Changes
+                                    </button>
+
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -86,5 +108,14 @@
     $(document).ready(function () {
         $('.mdb-select').materialSelect();
     });
+
+    $(document).ready(function () {
+        $('#roleSelect').change(function () {
+            $('.lists').hide();
+            $('#' + $(this).val()).show();
+        });
+    });
+
+
 </script>
 </html>
