creating search input invoice list

--- a/src/main/resources/templates/manager_view.html
+++ b/src/main/resources/templates/manager_view.html
@@ -33,9 +33,9 @@
                                 <th scope="col">
                                     <label for="agencySearch">Agency</label><input type="text" id="agencySearch" onkeyup="filterResults()" placeholder="Agency">
                                 </th>
-                                <th scope="col"><label for="daysWorkedSearch">Days Worked</label><input type="number" pattern="/d*" id="daysWorkedSearch" onkeyup="filterResults()">
+                                <th scope="col"><label for="daysWorkedSearch">Days Worked</label><input type="number" pattern="/d*" id="daysWorkedSearch" onkeyup="filterResults()" placeholder="0">
                                 </th>
-                                <th scope="col"><label for="daysWorkedSearch">Over Time</label><input type="number" id="OverTimeSearch" onkeyup="filterResults()">
+                                <th scope="col"><label for="daysWorkedSearch">Over Time</label><input type="number" id="OverTimeSearch" onkeyup="filterResults()"placeholder="0">
                                 </th>
                                 <th scope="col">
                                     <label for="weekFinishedSearch">Week Finished</label><input type="date" id="weekFinishedSearch" onkeyup="filterResults()">
