--- a/src/main/resources/templates/invoice_list_view.html
+++ b/src/main/resources/templates/invoice_list_view.html
@@ -27,14 +27,28 @@
                         <table class="table table-light">
                             <thead>
                             <tr>
-                                <th scope="col">Name</th>
-                                <th scope="col">Agency</th>
-                                <th scope="col">Agency Email</th>
-                                <th scope="col">Days Worked</th>
-                                <th scope="col">Overtime</th>
-                                <th scope="col">Week finished</th>
-                                <th scope="col">Status</th>
-                                <th scope="col">Paid</th>
+                                <th scope="col">
+                                    <label for="nameSearch">Name</label><input type="text" id="nameSearch" onkeyup="filterResults()"placeholder="Name">
+                                </th>
+                                <th scope="col">
+                                    <label for="agencySearch">Agency</label><input type="text" id="agencySearch" onkeyup="filterResults()"placeholder="Agency">
+                                </th>
+                                <th scope="col">
+                                    <label for="agencyEmailSearch">Agency Email</label><input type="text" id="agencyEmailSearch" onkeyup="filterResults()"placeholder="agency@gmail.com"></th>
+                                <th scope="col">
+                                <th scope="col"><label for="daysWorkedSearch">Days Worked</label><input type="number" pattern="/d*" id="daysWorkedSearch" onkeyup="filterResults()"placeholder="0">
+                                </th>
+                                <th scope="col">
+                                <th scope="col"><label for="overTimeSearch">Over Time</label><input type="number" pattern="/d*" id="overTimeSearch" onkeyup="filterResults()"placeholder="0">
+                                </th>
+                                <th scope="col">
+                                    <label for="weekFinishedSearch">Week Finished</label><input type="date" id="weekFinishedSearch" onkeyup="filterResults()">
+                                </th>
+                                <th scope="col">
+                                    <label for="statusSearch">Status</label><input type="text" id="statusSearch" onkeyup="filterResults()"placeholder="Approved"/>
+                                </th>
+                                <th scope="col">  <label for="statusSearch">paid</label><input type="text" id="paidSearch" onkeyup="filterResults()"placeholder="true"/>
+                                </th>
                             </tr>
                             </thead>
                             <tbody>
