added filtering to manager

--- a/src/main/resources/templates/invoice_list_view.html
+++ b/src/main/resources/templates/invoice_list_view.html
@@ -67,6 +67,9 @@
     function sendApproval(id) {
         fetch(`/api/reviews/confirm/` +id)
     }
+    function filterResults() {
+
+    }
 </script>
 </body>
 </html>
