--- a/src/main/resources/static/css/starter-template.css
+++ b/src/main/resources/static/css/starter-template.css
@@ -51,6 +51,18 @@ body {
     background-color: #0D3759;
     border-radius: 20px;
 }
+.small-input, .tiny-input, .date-input{
+    width: 100px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.date-input {
+    width: 150px;
+}
+.tiny-input {
+    width: 50px;
+}
 @media (min-width: 768px) {
     .container-fluid>.navbar-header,
     .container>.navbar-header {
