--- a/src/main/resources/templates/manager_view.html
+++ b/src/main/resources/templates/manager_view.html
@@ -23,7 +23,7 @@
                 </div>
 
                 <div class="custom-form">
-                    <div class="mx-3 custom-bg">
+                    <div class="mx-3 custom-bg scrolling-wrapper">
                         <table class="table table-light" id="timesheetInfo">
                             <thead>
                             <tr>
