--- a/src/main/resources/templates/admin_select_contractors_list.html
+++ b/src/main/resources/templates/admin_select_contractors_list.html
@@ -15,7 +15,7 @@
                 <div class="row">
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-lg btn-primary btn-block custom-btn">
-                        Edit Manager
+                        Welp it works
                     </button>
                 </div>
 
@@ -24,20 +24,4 @@
     </div>
 </main>
 </body>
-
-<script>
-    // Material Select Initialization
-    $(document).ready(function () {
-        $('.mdb-select').materialSelect();
-    });
-
-    $(document).ready(function () {
-        $('#roleSelect').change(function () {
-            $('.lists').hide();
-            $('#' + $(this).val()).show();
-        });
-    });
-
-
-</script>
 </html>
