--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -102,6 +102,15 @@
                             </select>
                         </div>
 
+                        <div class="form-group custom-label" th:id="managerHidden">
+                            <label th:for="manager">Select Manager For Contractor</label>
+                                <select class="btn btn-lg btn-secondary btn-block custom-btn">
+                                    <option th:each="i:${managerKey}" th:value="*{i.id}"
+                                            th:text="*{i.username}">
+                                    </option>
+                                </select>
+                        </div>
+
                         <div class="row mt-4">
                             <input th:name="${_csrf.parameterName}" th:value="${_csrf.token}" type="hidden"/>
 
