--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -105,8 +105,8 @@
                         <div class="form-group custom-label" id="managerHidden">
                             <label th:for="manager">Select Manager For Contractor</label>
                                 <select class="btn btn-lg btn-secondary btn-block custom-btn">
-                                    <option th:each="i:${managerKey}" th:value="*{i.id}"
-                                            th:text="*{i.username}">
+                                    <option th:each="i:${managerKey}" th:value="${i.id}"
+                                            th:text="${i.username}">
                                     </option>
                                 </select>
                         </div>
