--- a/src/main/resources/templates/admin_select_contractors_list.html
+++ b/src/main/resources/templates/admin_select_contractors_list.html
@@ -24,6 +24,7 @@
 
                 <div class="custom-form" th:if="${!Contractors.isEmpty()}">
                     <div class="mx-3 custom-bg scrolling-wrapper">
+                        <form name="selectForm" th:id="selectForm">
                         <table class="table table-light">
                             <thead>
                             <tr>
@@ -48,16 +49,18 @@
                             <tr th:each="AContractor: ${Contractors}">
                                 <td><span th:text="${AContractor.getUser().getUsername()}"></span></td>
                                 <td><span th:text="${AContractor.getUser().getEmail()}"></span></td>
-                                <td><span th:text="${AContractor.getManager().getUsername()} + 'Current Manager'"></span></td>
+                                <td><span th:text="${AContractor.getManager().getUsername()} + ' Current Manager'"></span></td>
                                 <td>
                                     <div class="form-check">
-                                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                        <input type="radio" name="selected" class="form-check-input"
+                                               id="exampleCheck1" th:value="${AContractor.getUser().getId()}">
                                         <label class="form-check-label" for="exampleCheck1">Check me out</label>
                                     </div>
                                 </td>
                             </tr>
                             </tbody>
                         </table>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -65,4 +68,19 @@
     </div>
 </main>
 </body>
+<script>
+    var radios = document.getElementById("selectForm").getElementsByClassName("form-check-input");
+    var prev = null;
+    console.log(radios.length)
+    for (var i = 0; i < radios.length; i++) {
+        radios[i].addEventListener('change', function() {
+            // (prev) ? console.log(prev.value): null;
+            if (this !== prev) {
+                prev = this;
+            }
+            // console.log(this.value)
+            // fetch("url of the controller mapping"+ this.value)
+        });
+    }
+</script>
 </html>
