Start of javascript filtering

--- a/src/main/resources/templates/invoice_list_view.html
+++ b/src/main/resources/templates/invoice_list_view.html
@@ -93,6 +93,52 @@
     }
     function filterResults() {
 
+        var name_filter = document.getElementById("nameSearch").value.toUpperCase();
+        var agency_filter = document.getElementById("agencySearch").value.toUpperCase();
+        var worked_filter = document.getElementById("daysWorkedSearch").value;
+        var overtime_filter = document.getElementById("OverTimeSearch").value;
+        var table = document.getElementById("timesheetInfo");
+        var tr = table.getElementsByTagName("tr");
+
+        var td;
+        for (i = 0; i < tr.length; i++) {
+            tr[i].style.display = "";
+
+
+            td = tr[i].getElementsByTagName("td");
+            if (td[0]) {
+                txtValue = td.textContent || td.innerText;
+                if (!(txtValue.toUpperCase().indexOf(name_filter) > -1) && name_filter) {
+                    tr[i].style.display = "none";
+                }
+            }
+
+            td = tr[i].getElementsByTagName("td")[1];
+            if (td) {
+                txtValue = td.textContent || td.innerText;
+                if (!(txtValue.toUpperCase().indexOf(agency_filter) > -1) && agency_filter) {
+                    tr[i].style.display = "none";
+                }
+            }
+
+            td = tr[i].getElementsByTagName("td")[2];
+            if (td) {
+                txtValue = td.textContent || td.innerText;
+                if (!(txtValue == worked_filter) && worked_filter) {
+                    tr[i].style.display = "none";
+                }
+            }
+
+            td = tr[i].getElementsByTagName("td")[3];
+            if (td) {
+                txtValue = td.textContent || td.innerText;
+                if (!(txtValue == overtime_filter) && overtime_filter) {
+                    tr[i].style.display = "none";
+                }
+            }
+
+        }
+
     }
 </script>
 </body>
