--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -39,13 +39,13 @@
                         <input class="btn btn-lg btn-primary btn-block text-uppercase custom-btn" type="submit"
                                value="Sign In"/>
 
-                        <a class="btn btn-lg btn-primary btn-block text-uppercase custom-btn"
-                           th:href="@{/register}"
-                           th:id="register">Register</a>
+<!--                        <a class="btn btn-lg btn-primary btn-block text-uppercase custom-btn"-->
+<!--                           th:href="@{/register}"-->
+<!--                           th:id="register">Register</a>-->
 
-                        <a class="btn btn-lg btn-primary btn-block text-uppercase custom-btn"
-                           th:href="@{/registerAgency}"
-                           th:id="registerAgency">Register Agency</a>
+<!--                        <a class="btn btn-lg btn-primary btn-block text-uppercase custom-btn"-->
+<!--                           th:href="@{/registerAgency}"-->
+<!--                           th:id="registerAgency">Register Agency</a>-->
                     </div>
 
                 </form>
