--- a/src/main/resources/templates/admin_select_contractors_list.html
+++ b/src/main/resources/templates/admin_select_contractors_list.html
@@ -25,41 +25,49 @@
                 <div class="custom-form" th:if="${!Contractors.isEmpty()}">
                     <div class="mx-3 custom-bg scrolling-wrapper">
                         <form name="selectForm" th:id="selectForm">
-                        <table class="table table-light">
-                            <thead>
-                            <tr>
-                                <th scope="col">
-                                    <label for="usernameSearch">Name</label>
-                                    <input class="small-input" type="text" id="usernameSearch" onkeyup="filterResults()"
-                                           placeholder="Name">
-                                </th>
-                                <th scope="col">
-                                    <label for="managernameSearch">Agency</label>
-                                    <input class="small-input" type="text" id="managernameSearch" onkeyup="filterResults()"
-                                           placeholder="Agency">
-                                </th>
-                                <th scope="col">
-                                    <label for="ContractorEmailSearch">Contractor Email</label>
-                                    <input class="small-input" type="text" id="ContractorEmailSearch"
-                                           onkeyup="filterResults()" placeholder="agency@gmail.com">
-                                </th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr th:each="AContractor: ${Contractors}">
-                                <td><span th:text="${AContractor.getUser().getUsername()}"></span></td>
-                                <td><span th:text="${AContractor.getUser().getEmail()}"></span></td>
-                                <td><span th:text="${AContractor.getManager().getUsername()} + ' Current Manager'"></span></td>
-                                <td>
-                                    <div class="form-check">
-                                        <input type="radio" name="selected" class="form-check-input"
-                                               id="exampleCheck1" th:value="${AContractor.getUser().getId()}">
-                                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                                    </div>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
+                            <table class="table table-light">
+                                <thead>
+                                <tr>
+                                    <th scope="col">
+                                        <label for="usernameSearch">Name</label>
+                                        <input class="small-input" type="text" id="usernameSearch"
+                                               onkeyup="filterResults()"
+                                               placeholder="Name">
+                                    </th>
+                                    <th scope="col">
+                                        <label for="managernameSearch">Agency</label>
+                                        <input class="small-input" type="text" id="managernameSearch"
+                                               onkeyup="filterResults()"
+                                               placeholder="Agency">
+                                    </th>
+                                    <th scope="col">
+                                        <label for="ContractorEmailSearch">Contractor Email</label>
+                                        <input class="small-input" type="text" id="ContractorEmailSearch"
+                                               onkeyup="filterResults()" placeholder="agency@gmail.com">
+                                    </th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="AContractor: ${Contractors}">
+                                    <td><span th:text="${AContractor.getUser().getUsername()}"></span></td>
+                                    <td><span th:text="${AContractor.getUser().getEmail()}"></span></td>
+                                    <td><span
+                                            th:text="${AContractor.getManager().getUsername()} + ' Current Manager'"></span>
+                                    </td>
+                                    <td>
+                                        <span><input type="checkbox" name="selected" class="custom-bg"
+                                                     id="exampleCheck1"
+                                                     th:value="${AContractor.getUser().getId()}">
+                                        </span>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+
+                            <a class="btn btn-lg btn-primary btn-block text-uppercase custom-btn"
+                               th:onclick="mapSelection()"
+                               th:id="assign">Finish</a>
+
                         </form>
                     </div>
                 </div>
@@ -71,16 +79,17 @@
 <script>
     var radios = document.getElementById("selectForm").getElementsByClassName("form-check-input");
     var prev = null;
-    console.log(radios.length)
+    // console.log(radios.length)
+
     for (var i = 0; i < radios.length; i++) {
-        radios[i].addEventListener('change', function() {
+        radios[i].addEventListener('change', function mapSelection() {
             // (prev) ? console.log(prev.value): null;
-            if (this !== prev) {
-                prev = this;
+            if (this.checked) {
+                fetch("/assignContractors/" + this.value)
             }
-            // console.log(this.value)
-            // fetch("url of the controller mapping"+ this.value)
         });
     }
+
+
 </script>
 </html>
